updated index.html => test 1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <body>
   <h1>This is a Heading</h1>
   <h2>This is another Heading</h2>
+  <hr>
+    <h3>AWS CodePipeline</h3>
+    <h4>Test 1</h4>
+  <hr>
   <p>first paragraph.</p>
   <p>This is a paragraph.</p>
   <p>This is another paragraph.</p> 
